FIX: added min height to button container to minimise layout shift

--- a/public/experiments/card-games/dungeon-solitaire/style.css
+++ b/public/experiments/card-games/dungeon-solitaire/style.css
@@ -20,3 +20,7 @@
 aside {
   float: right;
 }
+
+#button-track {
+  min-block-size: 3ch;
+}
